--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/Grishechkina/express-mesto-gha.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Marina Grigoreva",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Grishechkina/express-mesto-gha/issues"
@@ -22,7 +22,6 @@
   "homepage": "https://github.com/Grishechkina/express-mesto-gha#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
-
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   },
